# final_project_epam

./: README.md  app.py  business_logic.py  pyproject.toml
app/: app.py  business_logic.py  config.py  routs.py
app/templates/: index.html
app/tests/: test_busness_logic.py
app/tests/data_for_test/: 1.txt  2.txt
fin/: app.py  business_logic.py
fin/templates/: index.html
